@@ -1,1 +1,9 @@
 TODO, in decreasing order of importance.
+
+Installation into a non-standard directory. Should
+be able to set the directory in one place and have everything follow.
+
+The startup script /etc/init.d/weewx should be optionally installed.
+When requested, it should also make the appropriate entries in /etc/rc?.d
+
+A few "del" here and there might reduce memory requirements.
